2006-10-02  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.0.3.

	* NEWS: Bump version to 1.0.3.

	* configure.ac: Bump version to 1.0.3.

2006-09-11  Roger Leigh  <rleigh@debian.org>

	* Version 1.0.2.

	* debian/changelog: Finalise for 1.0.2.

2006-08-25  Roger Leigh  <rleigh@debian.org>

	* po/schroot.pot: Add.

2006-08-19  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document --directory.

2006-08-19  Roger Leigh  <rleigh@debian.org>

	* Merge from mainline.

	* HACKING: Document additional directory fallback checks.

	* schroot/schroot.1.in, dchroot/dchroot.1.in,
	dchroot-dsa/dchroot-dsa.1.in: Document directory option.

	* schroot/schroot-main-base.cc
	(run_impl): If a directory option was specified, set the auth wd
	member.

	* schroot/schroot-options.cc, dchroot/dchroot-options.cc,
	dchroot-dsa/dchroot-dsa-options.cc:
	(add_options): Add directory option.

	* schroot/schroot-options-base.h: Add directory member, used to
	specify the directory inside the chroot.

	* dchroot/dchroot-session.cc, dchroot-dsa/dchroot-dsa-session.cc
	(get_login_directories): Use working directory in place of the
	normal directory fallback list if set.

	* sbuild/sbuild-session.cc
	(get_login_directories, get_command_directories): Use working
	directory in place of the normal directory fallback list if set.

	* sbuild/sbuild-auth.cc (get_wd, set_wd): New methods.  Get and
	set the working directory.

	* sbuild/sbuild-auth.h: Add wd member variable to store the
	working directory to use.

2006-08-18  Roger Leigh  <rleigh@debian.org>

	* Merge from mainline.

	* schroot/schroot-base-options.cc,
	schroot/schroot-options-base.cc,
	schroot/schroot-listmounts-options.cc,
	schroot/schroot-releaselock-options.cc
	(add_option_groups): Add workaround for boost if
	BOOST_PROGRAM_OPTIONS_DESCRIPTION_OLD is defined.

	* configure.ac: Add check for
	boost::program_options::options_description::options(), which does
	not exist in older versions of boost.
