@@ -1,6 +1,12 @@
 schroot (1.0.3-1) unstable; urgency=low
 
   * New upstream release.
+  * dchroot/dchroot-session.cc, dchroot-dsa/dchroot-dsa-session.cc: The
+    syslog logging of the command or shell being run in the chroot now
+    only occurs when running as root or switching to another user.  If the
+    user is the same inside and outside the chroot, and not root, the
+    command or shell being run will not be logged.  Thanks to Helge
+    Kreutzmann (Closes: #381695).
 
  -- Roger Leigh <rleigh@debian.org>  Mon,  2 Oct 2006 22:37:12 +0100
 
